# linuxtrack-Qt6-Wayland

./: CMakeLists.txt  COMPILATION_FIXES.md  HANDOFF.md  INSTALLATION_PATH_ANALYSIS.md  MODERNIZATION_ROADMAP.md  README  README.md  cmake_install.cmake  install_manifest.txt  ltr_robust.reg  ltr_udp.reg
.github/workflows/: build.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_local/: cmake_install.cmake  config.h  install_manifest.txt
build_local/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_local/src/: cmake_install.cmake  liblinuxtrack.so.0  liblinuxtrack32.so.0  ltr_extractor  ltr_hotkeyd  ltr_pipe  ltr_recenter  ltr_server1  osc_server
build_local/src/lal/: cmake_install.cmake  test_lal
build_local/src/ltr_hotkey_gui/: cmake_install.cmake
build_local/src/ltr_hotkey_gui/ltr_hotkey_gui_autogen/: deps
build_local/src/ltr_hotkey_gui/ltr_hotkey_gui_autogen/include/: moc_ltr_hotkey_gui.cpp  moc_ltr_hotkey_gui.cpp.d
build_local/src/mickey/: cmake_install.cmake  mickey
build_local/src/mickey/mickey_autogen/: deps  mocs_compilation.cpp
build_local/src/mickey/mickey_autogen/EWIEGA46WW/: moc_keyb_x11.cpp.d  qrc_mickey.cpp
build_local/src/mickey/mickey_autogen/YFOEOD7QVB/: moc_help_view.cpp  moc_help_view.cpp.d  moc_help_viewer.cpp  moc_help_viewer.cpp.d
build_local/src/mickey/mickey_autogen/include/: moc_hotkey.cpp  moc_hotkey.cpp.d  moc_hotkey_setup_dlg.cpp  moc_hotkey_setup_dlg.cpp.d  moc_keyb.cpp  moc_keyb.cpp.d  moc_mickey.cpp  moc_mickey.cpp.d  moc_my_line_edit.cpp  moc_my_line_edit.cpp.d  moc_transform.cpp  moc_transform.cpp.d  ui_calibration.h  ui_hotkey_setup.h  ui_logview.h  ui_mickey.h
build_local/src/qt_gui/: cmake_install.cmake  ltr_gui
build_local/src/qt_gui/ltr_gui_autogen/: deps  mocs_compilation.cpp
build_local/src/qt_gui/ltr_gui_autogen/EWIEGA46WW/: moc_glwidget.cpp  moc_glwidget.cpp.d  moc_help_view.cpp.d  moc_help_viewer.cpp.d  moc_lal_dialog.cpp  moc_lal_dialog.cpp.d  moc_prefix_discovery_dialog.cpp  moc_prefix_discovery_dialog.cpp.d
build_local/src/qt_gui/ltr_gui_autogen/include/: moc_device_setup.cpp  moc_device_setup.cpp.d  moc_downloading.cpp  moc_downloading.cpp.d  moc_extractor.cpp  moc_extractor.cpp.d  moc_guardian.cpp  moc_guardian.cpp.d  moc_joy_prefs.cpp  moc_joy_prefs.cpp.d  moc_log_view.cpp  moc_log_view.cpp.d  moc_ltr_dev_help.cpp  moc_ltr_dev_help.cpp.d  moc_ltr_gui.cpp  moc_ltr_gui.cpp.d  moc_ltr_model.cpp  moc_ltr_model.cpp.d  moc_ltr_profiles.cpp  moc_ltr_profiles.cpp.d  moc_ltr_show.cpp  moc_ltr_show.cpp.d  moc_ltr_state.cpp  moc_ltr_state.cpp.d  moc_macps3eye_prefs.cpp  moc_macps3eye_prefs.cpp.d  moc_macps3eyeft_prefs.cpp  moc_macps3eyeft_prefs.cpp.d  moc_scurve.cpp  (+50 more)
build_local/src/wine_bridge/: cmake_install.cmake
packaging/appimage/: AppRun  make_appimage.sh
src/: CMakeLists.txt  cmake_install.cmake  liblinuxtrack.so.0  liblinuxtrack32.so.0  libusb_ifc.c  linuxtrack.c  ltr_extractor  ltr_hotkeyd.c  ltr_pipe  ltr_recenter  ltr_server1  ltr_srv_master.cpp  ltr_udp  ltr_udp.c  pref.cpp  tir_driver_prefs.c  tracking.c  utils.c  utils.h
src/lal/: CMakeLists.txt  README.md  catch_amalgamated.hpp  cmake_install.cmake  lal_manager.cpp  lal_manager.h  lal_manifest.json  test_lal.cpp
src/ltr_hotkey_gui/: cmake_install.cmake  ltr_hotkey_gui
src/ltr_hotkey_gui/ltr_hotkey_gui_autogen/: deps  moc_predefs.h
src/ltr_hotkey_gui/ltr_hotkey_gui_autogen/include/: moc_ltr_hotkey_gui.cpp  moc_ltr_hotkey_gui.cpp.d
src/mickey/: cmake_install.cmake  keyb_x11.cpp  mickey.cpp
src/mickey/mickey_autogen/: deps  moc_predefs.h
src/mickey/mickey_autogen/EWIEGA46WW/: moc_keyb_x11.cpp.d
src/mickey/mickey_autogen/YFOEOD7QVB/: moc_help_view.cpp  moc_help_view.cpp.d  moc_help_viewer.cpp  moc_help_viewer.cpp.d
src/mickey/mickey_autogen/include/: moc_hotkey.cpp  moc_hotkey.cpp.d  moc_hotkey_setup_dlg.cpp  moc_hotkey_setup_dlg.cpp.d  moc_keyb.cpp  moc_keyb.cpp.d  moc_mickey.cpp  moc_mickey.cpp.d  moc_my_line_edit.cpp  moc_my_line_edit.cpp.d  moc_transform.cpp  moc_transform.cpp.d  ui_chsettings.h  ui_hotkey.h
src/qt_gui/: CMakeLists.txt  cmake_install.cmake  device_setup.cpp  glwidget.cpp  glwidget.h  guardian.cpp  guardian.h  lal_dialog.cpp  ltr.ui  ltr_gui.cpp  ltr_gui.h  ltr_gui.pro  ltr_gui.pro.in  ltr_gui_prefs.cpp  ltr_model.cpp  ltr_model.h  ltr_profiles.cpp  main.cpp  objreader.cpp  plugin_install.cpp  prefix_discovery.cpp  prefix_discovery.h  prefix_discovery_dialog.cpp  prefix_discovery_dialog.h  prefix_discovery_dialog.ui  profile_selector.cpp  profile_selector.h  scview.cpp  tir_prefs.cpp  udp_bridge.cpp  udp_bridge.h  udp_settings.cpp  udp_settings.h  udp_settings.ui  wine_launcher.cpp  xplugin.cpp
src/qt_gui/ltr_gui_autogen/: deps  moc_predefs.h
src/qt_gui/ltr_gui_autogen/EWIEGA46WW/: moc_glwidget.cpp  moc_glwidget.cpp.d  moc_help_view.cpp  moc_help_view.cpp.d  moc_help_viewer.cpp  moc_help_viewer.cpp.d  moc_lal_dialog.cpp  moc_lal_dialog.cpp.d  moc_prefix_discovery_dialog.cpp  moc_prefix_discovery_dialog.cpp.d  qrc_ltr_rc.cpp
src/qt_gui/ltr_gui_autogen/include/: moc_device_setup.cpp  moc_device_setup.cpp.d  moc_downloading.cpp  moc_downloading.cpp.d  moc_extractor.cpp  moc_extractor.cpp.d  moc_guardian.cpp  moc_guardian.cpp.d  moc_joy_prefs.cpp  moc_joy_prefs.cpp.d  moc_log_view.cpp  moc_log_view.cpp.d  moc_ltr_dev_help.cpp  moc_ltr_dev_help.cpp.d  moc_ltr_gui.cpp  moc_ltr_gui.cpp.d  moc_ltr_model.cpp  moc_ltr_model.cpp.d  moc_ltr_profiles.cpp  moc_ltr_profiles.cpp.d  moc_ltr_show.cpp  moc_ltr_show.cpp.d  moc_ltr_state.cpp  moc_ltr_state.cpp.d  moc_macps3eye_prefs.cpp  moc_macps3eye_prefs.cpp.d  moc_macps3eyeft_prefs.cpp  moc_macps3eyeft_prefs.cpp.d  moc_plugin_install.cpp  moc_plugin_install.cpp.d  moc_profile_selector.cpp  moc_profile_selector.cpp.d  moc_profile_setup.cpp  moc_profile_setup.cpp.d  moc_progress.cpp  moc_progress.cpp.d  moc_scp_form.cpp  moc_scp_form.cpp.d  moc_scurve.cpp  moc_scurve.cpp.d  (+34 more)
src/wine_bridge/: CMakeLists.txt  cmake_install.cmake  udp_bridge_test.c
src/wine_bridge/client/: NPClient_main.c  NPClient_udp_main.c  linuxtrack_udp.c  ltr_wine_hotkeys.c  rest.c
